--- a/.github/workflows/Deploy-dev-feature.yml
+++ b/.github/workflows/Deploy-dev-feature.yml
@@ -2,7 +2,7 @@ name: Deploy-dev
 'on':
   push:
     branches:
-      - dev
+      - feature
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -41,7 +41,7 @@ jobs:
           key: ${{secrets.HOST_SSH_PRIVATE_KEY}}
           port: 22
           source: "docker-compose-dev.yml"
-          target: "/home/ubuntu/se-project-234-2023-devops_shop"
+          target: "/home/ubuntu/se-project-234-2023-devops_shop2"
 
       - name: docker compose
         uses: appleboy/ssh-action@v0.1.10
@@ -53,7 +53,7 @@ jobs:
           script: |
             cd /home/ubuntu/se-project-234-2023-devops_shop
             echo ${{secrets.DOCKER_HUB_TOKEN}} | docker login --username ${{secrets.DOCKER_HUB_USERNAME}} --password-stdin
-            docker compose down
-            docker compose pull
-            docker compose up -d
-            rm -rf /home/ubuntu/se-project-234-2023-devops_shop
+            docker compose -f docker-compose-feature.yml down
+            docker compose -f docker-compose-feature.yml pull
+            docker compose -f docker-compose-feature.yml up -d
+            rm -rf /home/ubuntu/se-project-234-2023-devops_shop2
