--- a/.github/workflows/Deploy-dev.yml
+++ b/.github/workflows/Deploy-dev.yml
@@ -2,7 +2,7 @@ name: Deploy-dev
 'on':
   push:
     branches:
-      - dev
+      - feature
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -31,7 +31,7 @@ jobs:
         with:
           context: .
           push: true
-          tags: dockerUserID/234-project-devops_shop:latest
+          tags: thanaphat14/234-project-devops_shop:latest
 
       - name: copy file via ssh password
         uses: appleboy/scp-action@v0.1.4
