--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project_front_end_2024",
   "version": "1.0.0",
-  "description": "",
+  "description": "[![Review Assignment Due Date](https://classroom.github.com/assets/deadline-readme-button-24ddc0f5d75046c5622901739e7c5dd533143b0c8e959d652212380cedb1ea36.svg)](https://classroom.github.com/a/mMAYBnR0)",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,7 +13,7 @@
     "axios": "^1.6.7",
     "body-parser": "^1.20.2",
     "ejs": "^3.1.9",
-    "express": "^4.18.3",
+    "express": "^4.19.1",
     "express-session": "^1.18.0",
     "lodash": "^4.17.21",
     "mysql2": "^3.9.2",
