--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: '3.3'
 services:
-  backoffice:
-    image: spineplug81/234-project-devops_shop:latest
+  node:
+    build: .
     ports:
+      - "8100:8100"
+    expose:
       - "8100"
+    links:
+      - mysql
+    depends_on:
+      - mysql
+
+  mysql:
+    image: mysql
+    environment:
+      MYSQL_DATABASES: userDB
+      MYSQL_USER: root
+      MYSQL_PASSWORD: password
+      MYSQL_ROOT_PASSWORD: password
+    ports:
+      - "3306:3306"
+    volumes:
+      - ./data/mysql/:/var/lib/mysql
+    expose:
+      - "3306"
