--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.3'
 services:
-  node:
-    build: .
+  frontend:
+    image: thanaphat14/234-project-devops_shop:latest
     ports:
       - "8101:3000"
     expose:
